tests/fixtures/errors/missing_arg_call.z
# E0300: a function call that omits a required argument with no default.
f: function {a: i64 b: i64} is {}
main: function is {
    f a: 1
}
